<resources>
    <string name="setup_host_label">Host</string>
    <string name="setup_client_id_label">Client ID</string>
    <string name="setup_client_secret_label">Client Secret</string>

    <string name="button_next">Next</string>
    <string name="icon_user_profile">User profile icon</string>
    <string name="icon_tags">tags icon</string>

    <string name="search_icon">Search icon</string>
    <string name="search_hint">Search</string>
</resources>
